--- a/discovery-frontend/src/assets/css/theme_dark/metatron/page.css
+++ b/discovery-frontend/src/assets/css/theme_dark/metatron/page.css
@@ -48055,6 +48055,7 @@
     height: 22px;
     background: url(../../../images/btn_popclose.png) no-repeat;
     background-position: left -112px;
+    z-index:10;
 }
 
 .theme-dark .ddp-box-meta.type-form .ddp-pop-top {
@@ -50557,7 +50558,6 @@
   display: flex;
   flex-direction: column;
   top: 0;
-  marign-top: -84px;
   padding: 94px 60px 20px 60px;
   height: 100%;
   box-sizing: border-box;
